--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -112,7 +112,7 @@
 
   <div class="form-group">
     <label for="url">URL сайта:</label>
-    <input type="text" id="url" placeholder="https://ice19942335.github.io/RollegHockey/">
+    <input type="text" id="url" placeholder="https://hockey.rolleg.eu/">
   </div>
 
   <div class="form-group">
