--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -27,7 +27,6 @@
       color: #555;
     }
     input[type="text"],
-    input[type="time"],
     input[type="number"],
     select {
       width: 100%;
@@ -36,6 +35,19 @@
       border-radius: 4px;
       box-sizing: border-box;
       font-size: 14px;
+    }
+    .time-selector {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+    }
+    .time-selector select {
+      flex: 1;
+    }
+    .time-separator {
+      font-size: 16px;
+      font-weight: 500;
+      color: #555;
     }
     input[type="checkbox"] {
       margin-right: 8px;
@@ -73,13 +85,6 @@
     .btn-secondary:hover {
       background: #0b7dda;
     }
-    .btn-force {
-      background: #FF9800;
-      color: white;
-    }
-    .btn-force:hover {
-      background: #F57C00;
-    }
     .hidden {
       display: none;
     }
@@ -116,21 +121,8 @@
   </div>
 
   <div class="form-group">
-    <label for="scheduleMode">Режим расписания:</label>
-    <select id="scheduleMode">
-      <option value="daily">Ежедневно в указанное время</option>
-      <option value="interval">Каждые N часов</option>
-    </select>
-  </div>
-
-  <div class="form-group" id="dailyTimeGroup">
-    <label for="dailyTime">Время открытия:</label>
-    <input type="time" id="dailyTime" value="09:00">
-  </div>
-
-  <div class="form-group hidden" id="intervalHoursGroup">
-    <label for="intervalHours">Интервал (часы):</label>
-    <input type="number" id="intervalHours" min="1" max="168" value="24">
+    <label for="intervalMinutes">Открывать каждые N минут:</label>
+    <input type="number" id="intervalMinutes" min="1" max="1440" value="60">
   </div>
 
   <div class="form-group">
@@ -148,10 +140,6 @@
   <div class="button-group">
     <button class="btn-primary" id="saveBtn">Сохранить</button>
     <button class="btn-secondary" id="runNowBtn">Запустить сейчас</button>
-  </div>
-
-  <div class="button-group">
-    <button class="btn-force" id="forceRunBtn">Force Run</button>
   </div>
 
   <div id="status" class="status hidden"></div>
